static/css/components/header-bar.css
/* ... */
.header-bar .app-drawer li button {
  width: 100%;
  font-family: var(--font-family-button);
  text-align: left;
  cursor: pointer;
}

.header-bar .app-drawer .subsection:first-child {
  border-top: 1px solid var(--dark-beige);
}

.header-bar .app-drawer .login-links {
  display: flex;
  border-bottom: none;
  justify-content: space-evenly;
  column-gap: 16px;
}

.header-bar .app-drawer .login-links:hover {
  background-color: transparent;
}

.header-bar .app-drawer .login-links a {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 6px;
  padding: 6px;
  transition: 0.3s;
}

.header-bar .app-drawer .login-links .login-links__primary {
  background: var(--primary-blue);
  color: var(--white);
}

.header-bar .app-drawer .login-links .login-links__primary:hover {
  background-color: var(--link-blue);
}

.header-bar .app-drawer .login-links .login-links__secondary {
  color: var(--primary-blue);
  border: 2px solid var(--primary-blue);
}

.header-bar .app-drawer .login-links .login-links__secondary:hover {
  background-color: var(--white);
}
/* stylelint-enable max-nesting-depth, selector-max-specificity */

.header-bar .hamburger-component {
  -webkit-box-ordinal-group: 5;
  -ms-flex-order: 4;
  order: 4;
  margin-right: 5px;
}

/* stylelint-disable max-nesting-depth, selector-max-specificity */
.header-bar .hamburger-component details[open] .mask-menu {
  visibility: visible;
  opacity: 0.6;
  animation: fadeIn 0.2s ease-in-out;
}

.header-bar .hamburger-component details[open] summary ~ * {
  animation: sweep 0.2s ease-in-out;
}

.header-bar .hamburger-component details[open] .hamburger__icon {
  background-color: var(--account-icon-background);
}

.header-bar .hamburger-component .hamburger__icon {
  width: 22px;
  padding: 0 10px;
  border-radius: 3px;
  box-sizing: content-box;
}
/* stylelint-enable max-nesting-depth, selector-max-specificity */

@keyframes sweep {
  0% {
    opacity: 0;
    transform: translateX(50px);
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 0.6;
  }
}

.header-bar .hamburger-component summary::marker {
  content: "";
  font-size: 0;
}

.header-bar .hamburger-component summary::-webkit-details-marker {
  display: none;
}

.header-bar .hamburger-component label {
  background: transparent;
  border: none;
}

/*  Technical/design debt: For unknown historic reasons the hamburger button does not have an
    arrow to the right of the icon, but the profile icon does. This is likely an accessibility
    or UX problem.

    There's an argument to be made that this should be visible for consistency with other dropdown
    menus and to better meet user expectations which might expect the hamburger to load a menu
    overlaying the screen as is consistent with other designs.

    When OpenLibrary has a design lead, this should be understood and either reviewed or better
    documented. */
.header-bar .hamburger-component .down-arrow {
  display: none;
}

.header-bar .mask-menu {
  position: fixed;
  top: 0;
  /* stylelint-disable declaration-block-no-redundant-longhand-properties */
  left: 0;
  right: 0;
  opacity: 0;
  bottom: 0;
  /* stylelint-enable declaration-block-no-redundant-longhand-properties */
  background: rgba(0, 0, 0, 0.5);
  z-index: 1;
  visibility: hidden;
}

.header-bar .header-dropdown summary::before {
  /* For the <details> polyfill used for IE11 */
  content: "" !important;
}

.header-bar .header-dropdown .header-dropdown__icon {
  width: 40px;
  height: 40px;
}

.header-bar .header-dropdown .account__icon {
  border: 2px solid var(--account-icon-border);
  border-radius: 4px;
  width: 30px;
  height: 30px;
}

.header-bar .header-dropdown .mr-notifications {
  position: absolute;
  background: var(--primary-blue);
  color: var(--white);
  border-radius: var(--border-radius-notification);
  padding: 3px 7px;
  font-size: var(--font-size-label-medium);
  margin-top: 25px;
  font-weight: bold;
}

.header-bar .header-dropdown button,
.header-bar .header-dropdown a {
  color: var(--white);
  text-decoration: none;
  display: block;
  border: 0;
  background: none;
}

.header-bar .logo-component {
  -webkit-box-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-ordinal-group: 2;
  -ms-flex-order: 1;
  order: 1;
  z-index: -1;
}

.header-bar .logo-component .logo-icon {
  position: relative;
  top: -1px;
  height: 32px;
  width: auto;
  margin-left: 5px;
  -ms-flex-item-align: center;
  align-self: center;
}

.header-bar .navigation-component.mobile {
  display: flex;
}

.header-bar .navigation-component {
  display: none;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-box-ordinal-group: 6;
  -ms-flex-order: 5;
  order: 5;
  /* Despite occurring later in the DOM, this header should be overlaid underneath the items
   * above. E.g. search and account dropdowns. */
  z-index: 1;
}

.header-bar .navigation-component li {
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  padding: 0;
  font-size: 1em;
}

/* stylelint-disable max-nesting-depth, selector-max-specificity */
.header-bar .navigation-component li button,
.header-bar .navigation-component li a {
  color: var(--dark-grey);
  text-decoration: none;
  display: block;
}

.header-bar .navigation-component li button:visited,
.header-bar .navigation-component li a:visited {
  color: var(--dark-grey);
  text-decoration: none;
}

.header-bar .navigation-component li .dropdown-menu {
  position: absolute;
  text-align: left;
  width: 100%;
  top: 4px;
}

.header-bar .navigation-component li .dropdown-menu li a {
  color: var(--darker-grey);
}

.header-bar .navigation-component li .navigation-dropdown-component {
  position: relative;
}
/* ... */

